Make SeExpr script thumbnails optional

BUG: 442096

Co-authored-by: Halla Rempt <halla@valdyas.org>
(cherry picked from commit 0636d6f1f1744a05b67deca647b56bb5bd790a4e)